<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <data>
        <variable
            name="viewModel"
            type="engineertest.android.touche.com.paytouch.data.view_model.SearchViewModel" />
    </data>
<android.support.constraint.ConstraintLayout
    android:background="@drawable/dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:srcCompat="@drawable/mglass_green"
        android:scaleType="centerCrop"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
      />



    <ImageButton
        android:id="@+id/close_icon"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        app:srcCompat="@drawable/cross"
        android:scaleType="centerCrop"
        android:background="@null"
        android:onClick="@{viewModel.onCloseClick}"
         />


    <engineertest.android.touche.com.paytouch.ui.views.TextView
        android:id="@+id/search_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/search"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/font_size_lg"
        app:layout_constraintLeft_toRightOf="@+id/search_icon"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp" />


    <engineertest.android.touche.com.paytouch.ui.views.TextView
        android:id="@+id/name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="@dimen/font_size_md"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/search_icon"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp" />


    <engineertest.android.touche.com.paytouch.ui.views.TextView
        android:id="@+id/location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="@dimen/font_size_md"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp" />

    <engineertest.android.touche.com.paytouch.ui.views.AutoCompleteTextView
        android:id="@+id/name"
        style="@style/EditTextTheme"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/write_name"
        android:text="@={viewModel.name}"
        android:onTextChanged="@{viewModel::onTextChanged}"
        app:adapter="@{viewModel.nameAdapter}"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_label" />


    <RelativeLayout
        android:id="@+id/locationGroup"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_label"
        app:layout_constraintLeft_toLeftOf="parent"
        >

        <engineertest.android.touche.com.paytouch.ui.views.Spinner
            android:id="@+id/location"
            style="@style/SpinnerTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            app:adapter="@{viewModel.locationAdapter}"
            android:selectedItemPosition="@={viewModel.selectedLocation}"
            android:layout_marginLeft="5dp"
            android:gravity="center" />

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_marginRight="15dp"
            android:src="@drawable/down" />


    </RelativeLayout>


    <engineertest.android.touche.com.paytouch.ui.views.TextView
        android:id="@+id/is_top_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_top"
        android:textSize="@dimen/font_size_md"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/locationGroup"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/radioButtonGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/is_top_label"
        android:onCheckedChanged="@{viewModel.onCheckedChange}"
        android:layout_marginLeft="32dp"
        android:layout_marginStart="32dp">


        <engineertest.android.touche.com.paytouch.ui.views.RadioButton
            android:id="@+id/radio_button_yes"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/yes"
            style="@style/RadioButtonTheme"
            />

        <engineertest.android.touche.com.paytouch.ui.views.RadioButton
            android:layout_marginTop="20dp"
            android:id="@+id/radio_button_no"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/no"
            style="@style/RadioButtonTheme"
            />


    </RadioGroup>

    <engineertest.android.touche.com.paytouch.ui.views.TextView
        android:id="@+id/popularity_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/popularity"
        android:textSize="@dimen/font_size_md"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonGroup"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp" />


    <com.crystal.crystalrangeseekbar.widgets.CrystalRangeSeekbar
        android:id="@+id/popularity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        app:onRangeSeekbarChangeListener="@{viewModel.popularityListener}"
        app:minValue="@{viewModel.minPopularityRange}"
        app:maxValue="@{viewModel.maxPopularityRange}"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popularity_label"
        app:layout_constraintLeft_toLeftOf="parent"
        />

    <engineertest.android.touche.com.paytouch.ui.views.TextView
        android:id="@+id/start_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.currentMinPopularityRange}"
        android:textSize="@dimen/font_size_md"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/popularity"
        android:layout_marginLeft="26dp"
        app:layout_constraintLeft_toLeftOf="parent"
         />

    <engineertest.android.touche.com.paytouch.ui.views.TextView
        android:id="@+id/end_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.currentMaxPopularityRange}"
        android:textSize="@dimen/font_size_md"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/popularity"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="26dp" />


    <com.andexert.library.RippleView
        android:id="@+id/ripple_effect_search"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="32dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_range"
        rv_centered="true">
    <engineertest.android.touche.com.paytouch.ui.views.Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/search"
        android:text="@string/search"
        android:onClick="@{viewModel.onSearchClick}"
        style="@style/ButtonTheme"
        ></engineertest.android.touche.com.paytouch.ui.views.Button>
    </com.andexert.library.RippleView>



    <View
        android:layout_width="wrap_content"
        android:layout_height="15dp"
        android:layout_marginTop="0dp"
        app:layout_constraintTop_toBottomOf="@+id/ripple_effect_search" />


</android.support.constraint.ConstraintLayout>
    </layout>